--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -40,6 +40,7 @@
         <module>log4j</module>
         <module>logback</module>
         <module>dubbo</module>
+        <module>rabbitmq</module>
     </modules>
 
     <dependencies>
@@ -181,6 +182,11 @@
         <dependency>
             <groupId>com.navercorp.pinpoint</groupId>
             <artifactId>pinpoint-dubbo-plugin</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.navercorp.pinpoint</groupId>
+            <artifactId>pinpoint-rabbitmq-plugin</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
