--- a/pom.xml
+++ b/pom.xml
@@ -659,6 +659,12 @@
                 <version>2.5.3</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.rabbitmq</groupId>
+                <artifactId>amqp-client</artifactId>
+                <version>3.4.2</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
