RabbitMQ continue transaction

--- a/plugins/rabbitmq/pom.xml
+++ b/plugins/rabbitmq/pom.xml
@@ -20,8 +20,8 @@
         </dependency>
 
         <dependency>
-            <groupId>com.rabbitmq</groupId>
-            <artifactId>amqp-client</artifactId>
+            <groupId>org.springframework.amqp</groupId>
+            <artifactId>spring-rabbit</artifactId>
             <scope>provided</scope>
         </dependency>
     </dependencies>
